--- a/actividades.html
+++ b/actividades.html
@@ -506,10 +506,7 @@
             <ul>
                 <li><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
                 <li><a href="aboutus.html"><i class="fas fa-users"></i> Quienes somos</a></li>
-                <li><a href="proyectos_activos.html"><i class="fas fa-project-diagram"></i> Proyectos activos</a></li>
-                <li><a href="proyectos_antiguos.html"><i class="fas fa-history"></i> Proyectos antiguos</a></li>
-                <li><a href="acogida.html"><i class="fas fa-laptop-code"></i> Nuestros Talleres</a></li>
-                <li><a href="colaboradores.html"><i class="fas fa-laptop-code"></i> Colabora con nosotros</a></li>
+                <li><a href="actividades.html"><i class="fas fa-project-diagram"></i> Actividades</a></li>
                 <li><a href="#contact"><i class="fas fa-envelope"></i> Contacto</a></li>
             </ul>
         </nav>
