--- a/actividades.html
+++ b/actividades.html
@@ -498,8 +498,8 @@
     <header>
         <div class="hero">
             <div class="hero-content">
-                <h1>Proyectos Activos</h1>
-                <p>Bienvenido a la sección de proyectos activos de Grupo Scout Vatnajökull.</p>
+                <h1>Actividades</h1>
+                <p>Bienvenid@ a la sección de actividades del Grupo Scout Vatnajökull.</p>
             </div>
         </div>
         <nav>
