--- a/index.html
+++ b/index.html
@@ -517,49 +517,52 @@
     <main>
         <section id="about" class="section">
             <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
+<div style="text-align: left;">
 
-<p>¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única? ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, ofrece una oportunidad muy enriquecedora de voluntariado que no solo transforma la vida de los niños y niñas a los que se acompaña, sino también la de quienes forman parte del proyecto.</p>
+  <p>¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única? ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, ofrece una oportunidad muy enriquecedora de voluntariado que no solo transforma la vida de los niños y niñas a los que se acompaña, sino también la de quienes forman parte del proyecto.</p>
 
-<h4>¿Por qué hacer voluntariado con nosotros?</h4>
+  <h4>¿Por qué hacer voluntariado con nosotros?</h4>
 
-<p>Formar parte de este grupo scout supone estar inmerso en un entorno natural incomparable, rodeado de montañas, bosques y una paz que solo la sierra puede ofrecer. No se trata únicamente de desempeñar el papel de monitor, sino de integrarse en una comunidad educativa que valora el crecimiento personal, el aprendizaje y el trabajo en equipo.</p>
+  <p>Formar parte de este grupo scout supone estar inmerso en un entorno natural incomparable, rodeado de montañas, bosques y una paz que solo la sierra puede ofrecer. No se trata únicamente de desempeñar el papel de monitor, sino de integrarse en una comunidad educativa que valora el crecimiento personal, el aprendizaje y el trabajo en equipo.</p>
 
-<h4>¿Qué ofrecemos?</h4>
+  <h4>¿Qué ofrecemos?</h4>
 
-<ul>
-  <li>
-    <p><strong>Crecimiento personal:</strong> Ser monitor en un grupo scout es mucho más que enseñar; es una oportunidad para crecer, desarrollar habilidades de liderazgo y adquirir experiencia en el trabajo con niños, niñas y jóvenes.</p>
-  </li>
-  <li>
-    <p><strong>Formación continua:</strong> No se requiere experiencia previa. Se valoran especialmente el entusiasmo, la pasión por el trabajo en equipo y la disposición para aprender. Además, en caso de no contar todavía con el título de monitor de ocio y tiempo libre, se ofrece la posibilidad de realizar las prácticas correspondientes y/o el curso de coordinador, en un entorno que favorece el aprendizaje práctico.</p>
-  </li>
-  <li>
-    <p><strong>Impacto real:</strong> Se trabaja de forma cercana con niños y jóvenes, ayudándoles a desarrollar valores como la solidaridad, el respeto, el esfuerzo y el trabajo en equipo, compartiendo risas, aventuras y momentos inolvidables.</p>
-  </li>
-  <li>
-    <p><strong>Conexión con la naturaleza:</strong> El entorno de Bustarviejo permite desconectar del estrés diario, respirar aire puro y mantener un contacto directo con la naturaleza, enriqueciendo la experiencia personal y el bienestar.</p>
-  </li>
-</ul>
+  <ul>
+    <li>
+      <p><strong>Crecimiento personal:</strong> Ser monitor en un grupo scout es mucho más que enseñar; es una oportunidad para crecer, desarrollar habilidades de liderazgo y adquirir experiencia en el trabajo con niños, niñas y jóvenes.</p>
+    </li>
+    <li>
+      <p><strong>Formación continua:</strong> No se requiere experiencia previa. Se valoran especialmente el entusiasmo, la pasión por el trabajo en equipo y la disposición para aprender. Además, en caso de no contar todavía con el título de monitor de ocio y tiempo libre, se ofrece la posibilidad de realizar las prácticas correspondientes y/o el curso de coordinador, en un entorno que favorece el aprendizaje práctico.</p>
+    </li>
+    <li>
+      <p><strong>Impacto real:</strong> Se trabaja de forma cercana con niños y jóvenes, ayudándoles a desarrollar valores como la solidaridad, el respeto, el esfuerzo y el trabajo en equipo, compartiendo risas, aventuras y momentos inolvidables.</p>
+    </li>
+    <li>
+      <p><strong>Conexión con la naturaleza:</strong> El entorno de Bustarviejo permite desconectar del estrés diario, respirar aire puro y mantener un contacto directo con la naturaleza, enriqueciendo la experiencia personal y el bienestar.</p>
+    </li>
+  </ul>
 
-<h4>¿Qué buscamos?</h4>
+  <h4>¿Qué buscamos?</h4>
 
-<p>Se buscan personas comprometidas, responsables y con ganas de aportar. Si motiva la idea de ser una figura educativa clave en la vida de los más jóvenes, independientemente del nivel de experiencia, este es el lugar adecuado.</p>
+  <p>Se buscan personas comprometidas, responsables y con ganas de aportar. Si motiva la idea de ser una figura educativa clave en la vida de los más jóvenes, independientemente del nivel de experiencia, este es el lugar adecuado.</p>
 
-<h4>¿Qué ganarás como voluntario?</h4>
+  <h4>¿Qué ganarás como voluntario?</h4>
 
-<ul>
-  <li><p>Desarrollo de habilidades de liderazgo y trabajo en equipo.</p></li>
-  <li><p>Experiencia valiosa en el ámbito educativo y social.</p></li>
-  <li><p>Oportunidad de aprender y disfrutar en un entorno natural, tranquilo y enriquecedor.</p></li>
-  <li><p>Formación práctica en actividades de ocio y tiempo libre.</p></li>
-  <li><p>Satisfacción personal al generar un impacto positivo en la vida de niños y niñas.</p></li>
-</ul>
+  <ul>
+    <li><p>Desarrollo de habilidades de liderazgo y trabajo en equipo.</p></li>
+    <li><p>Experiencia valiosa en el ámbito educativo y social.</p></li>
+    <li><p>Oportunidad de aprender y disfrutar en un entorno natural, tranquilo y enriquecedor.</p></li>
+    <li><p>Formación práctica en actividades de ocio y tiempo libre.</p></li>
+    <li><p>Satisfacción personal al generar un impacto positivo en la vida de niños y niñas.</p></li>
+  </ul>
 
-<h4>¿Estás listo para ser parte de una aventura educativa única?</h4>
+  <h4>¿Estás listo para ser parte de una aventura educativa única?</h4>
 
-<p>Si se busca una experiencia transformadora que combine naturaleza, educación y trabajo en equipo, el Grupo Scout Vatnajökull es una excelente oportunidad. No dudes en ponerte en contacto y dar el primer paso para formar parte de este proyecto.</p>
+  <p>Si se busca una experiencia transformadora que combine naturaleza, educación y trabajo en equipo, el Grupo Scout Vatnajökull es una excelente oportunidad. No dudes en ponerte en contacto y dar el primer paso para formar parte de este proyecto.</p>
 
-<p>¡Te esperamos en Bustarviejo con muchas ganas de crecer juntos!</p>
+  <p>¡Te esperamos en Bustarviejo con muchas ganas de crecer juntos!</p>
+
+</div>
 
         </section>
     </main>
