--- a/index.html
+++ b/index.html
@@ -517,15 +517,15 @@
     <main>
         <section id="about" class="section">
             <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
-<div style="text-align: left;">
+<div style="text-align: left; max-width: 900px;">
 
   <p>¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única? ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, ofrece una oportunidad muy enriquecedora de voluntariado que no solo transforma la vida de los niños y niñas a los que se acompaña, sino también la de quienes forman parte del proyecto.</p>
 
-  <h4>¿Por qué hacer voluntariado con nosotros?</h4>
+  <h3>¿Por qué hacer voluntariado con nosotros?</h3>
 
   <p>Formar parte de este grupo scout supone estar inmerso en un entorno natural incomparable, rodeado de montañas, bosques y una paz que solo la sierra puede ofrecer. No se trata únicamente de desempeñar el papel de monitor, sino de integrarse en una comunidad educativa que valora el crecimiento personal, el aprendizaje y el trabajo en equipo.</p>
 
-  <h4>¿Qué ofrecemos?</h4>
+  <h3>¿Qué ofrecemos?</h3>
 
   <ul>
     <li>
@@ -542,11 +542,11 @@
     </li>
   </ul>
 
-  <h4>¿Qué buscamos?</h4>
+  <h3>¿Qué buscamos?</h3>
 
   <p>Se buscan personas comprometidas, responsables y con ganas de aportar. Si motiva la idea de ser una figura educativa clave en la vida de los más jóvenes, independientemente del nivel de experiencia, este es el lugar adecuado.</p>
 
-  <h4>¿Qué ganarás como voluntario?</h4>
+  <h3>¿Qué ganarás como voluntario?</h3>
 
   <ul>
     <li><p>Desarrollo de habilidades de liderazgo y trabajo en equipo.</p></li>
@@ -556,7 +556,7 @@
     <li><p>Satisfacción personal al generar un impacto positivo en la vida de niños y niñas.</p></li>
   </ul>
 
-  <h4>¿Estás listo para ser parte de una aventura educativa única?</h4>
+  <h3>¿Estás listo para ser parte de una aventura educativa única?</h3>
 
   <p>Si se busca una experiencia transformadora que combine naturaleza, educación y trabajo en equipo, el Grupo Scout Vatnajökull es una excelente oportunidad. No dudes en ponerte en contacto y dar el primer paso para formar parte de este proyecto.</p>
 
