--- a/aboutus.html
+++ b/aboutus.html
@@ -219,7 +219,7 @@ footer {
 <main id="page-top">
   <section id="about" class="section">
     <h2>Quiénes somos</h2>
-    <p>Somos un grupo scout.</p>
+    <p>Somos un grupo scout ubicado en Bustarviejo.</p>
   </section>
 
   <section class="section">
