--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <main>
-        <section id="about" class="section">
+        <!--<section id="about" class="section">-->
             <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
 <div style="text-align: left; max-width: 900px;">
 
@@ -81,7 +81,7 @@
 
 </div>
 
-        </section>
+        <!--</section>-->
     </main>
 
     <footer id="contact">
