--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </header>
 
     <main>
-        <!--<section id="about" class="section">-->
+  <section class="section" id="contact">
             <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
-<div style="text-align: left; max-width: 900px;">
+
 
   <p>¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única? ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, ofrece una oportunidad muy enriquecedora de voluntariado que no solo transforma la vida de los niños y niñas a los que se acompaña, sino también la de quienes forman parte del proyecto.</p>
 <br>
@@ -79,9 +79,9 @@
 
   <p>¡Te esperamos en Bustarviejo con muchas ganas de crecer juntos!</p>
 
-</div>
 
-        <!--</section>-->
+
+        </section>
     </main>
 
     <footer id="contact">
