--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <main>
+<main id="page-top">
   <section class="section" id="contact">
             <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
 
