--- a/actividades.html
+++ b/actividades.html
@@ -6,8 +6,10 @@
     <meta name="description" content="Actividades">
     <meta name="author" content="Grupo Scout Vatnajökull">
     <title>Actividades del Grupo Scout Vatnajökull</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
+    <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle.css">
+    <link rel="icon" title="Icono del Grupo Scout Vatnajökull" type="image/png" href="https://gsvatnajokull.github.io/img/logo.gif">
 </head>
 
 <body>
