--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Grupo Scout Vatnajökull</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
-    <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle2.css">
+    <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle.css">
     <link rel="icon" title="Icono del Grupo Scout Vatnajökull" type="image/png" href="https://gsvatnajokull.github.io/img/logo.gif">
 </head>
 
@@ -31,8 +31,8 @@
         </nav>
     </header>
 
-<main id="page-top">
-  <section class="section" id="contact">
+<main>
+  <section class="section">
             <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
 
 
