--- a/404.html
+++ b/404.html
@@ -3,162 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página no encontrada - Grupo Scout Vatnajökull">
+    <meta name="description" content="Error 404">
     <meta name="author" content="Grupo Scout Vatnajökull">
-    <title>404 - Página no encontrada</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        :root {
-            --negro: #1a1a1a;
-            --blanco: #fff;
-            --rojo: #fd0010;
-            --rojo-oscuro: #c9000c;
-            --gris-claro: #f8f9fa;
-            --gris-medio: #e0e0e0;
-            --sombra: rgba(0, 0, 0, 0.15);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: var(--gris-claro);
-            color: var(--negro);
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            text-align: center;
-        }
-
-        main {
-            flex: 1;
-            padding: 40px 20px;
-            max-width: 800px;
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .section {
-            background-color: var(--blanco);
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 4px 12px var(--sombra);
-            text-align: center;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            margin-bottom: 30px;
-            width: 100%;
-        }
-
-        .section:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 20px var(--sombra);
-        }
-
-        h1 {
-            color: var(--rojo);
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-
-        p {
-            color: var(--negro);
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-            line-height: 1.6;
-        }
-
-        .robot {
-            width: 150px;
-            height: 150px;
-            margin: 20px auto;
-            cursor: pointer;
-            animation: wobble 2s ease-in-out infinite;
-            transition: transform 0.3s ease;
-        }
-
-        .robot.dance {
-            animation: dance 0.5s ease-in-out infinite alternate;
-        }
-
-        .counter {
-            font-size: 1rem;
-            color: var(--rojo);
-            margin-bottom: 20px;
-        }
-
-        .cta-button {
-            display: inline-block;
-            background: linear-gradient(90deg, var(--rojo), var(--rojo-oscuro));
-            color: var(--blanco);
-            padding: 12px 30px;
-            border-radius: 50px;
-            text-decoration: none;
-            font-weight: 600;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-        }
-
-        .cta-button:hover {
-            background: linear-gradient(90deg, var(--rojo-oscuro), var(--rojo));
-            transform: scale(1.05);
-        }
-
-        footer {
-            background-color: var(--gris-medio);
-            color: var(--negro);
-            text-align: center;
-            padding: 20px;
-            font-size: 0.8rem;
-        }
-
-        .social-icons {
-            margin-top: 10px;
-        }
-
-        .social-icons a {
-            color: var(--rojo);
-            margin: 0 8px;
-            font-size: 1rem;
-            transition: color 0.3s ease;
-        }
-
-        .social-icons a:hover {
-            color: var(--rojo-oscuro);
-        }
-
-        @keyframes wobble {
-            0% { transform: rotate(-5deg); }
-            50% { transform: rotate(5deg); }
-            100% { transform: rotate(-5deg); }
-        }
-
-        @keyframes dance {
-            0% { transform: rotate(-15deg) scale(1.1); }
-            100% { transform: rotate(15deg) scale(1.1); }
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            p {
-                font-size: 1rem;
-            }
-
-            .robot {
-                width: 100px;
-                height: 100px;
-            }
-        }
-    </style>
+    <title>Error 404 - Grupo Scout Vatnajökull</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
+    <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle.css">
+    <link rel="icon" title="Icono del Grupo Scout Vatnajökull" type="image/png" href="https://gsvatnajokull.github.io/img/logo.gif">
 </head>
 <body>
     <main>
