--- a/actividades.html
+++ b/actividades.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Actividades">
     <meta name="author" content="Grupo Scout Vatnajökull">
-    <title>Actividades del Grupo Scout Vatnajökull</title>
+    <title>Actividades - Grupo Scout Vatnajökull</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
     <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle.css">
