--- a/aboutus.html
+++ b/aboutus.html
@@ -1,200 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="Grupo Scout Vatnajökull — Quiénes somos, actividades y contacto" />
-<meta name="author" content="Grupo Scout Vatnajökull" />
-<title>Grupo Scout Vatnajökull — Sobre Nosotros</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-<style>
-:root {
-  --negro: #1a1a1a;
-  --blanco: #fff;
-  --rojo: #fd0010;
-  --rojo-oscuro: #c9000c;
-  --gris-claro: #f8f9fa;
-  --gris-medio: #e0e0e0;
-  --sombra: rgba(0,0,0,0.15);
-}
-
-* { margin:0; padding:0; box-sizing:border-box; }
-
-body {
-  font-family: 'Poppins', sans-serif;
-  background-color: var(--gris-claro);
-  color: var(--negro);
-  display:flex;
-  flex-direction:column;
-  min-height:100vh;
-}
-
-header {
-  background: linear-gradient(135deg, var(--rojo), var(--rojo-oscuro));
-  color: var(--blanco);
-  text-align:center;
-  padding:20px;
-  box-shadow:0 4px 12px var(--sombra);
-}
-
-.hero {
-  position: relative;
-  background: url('img/header.jpg') no-repeat center/cover;
-  padding: 60px 20px;
-  color: var(--blanco);
-  text-align: center;
-  margin: 20px auto;
-  border-radius: 20px;
-  overflow: hidden;
-  min-height: 48vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  max-width:1200px;
-}
-
-.hero::before {
-  content:'';
-  position:absolute;
-  inset:0;
-  background: rgba(0,0,0,0.45);
-  z-index:1;
-  border-radius:20px;
-}
-
-.hero-content { position: relative; z-index:2; max-width:1000px; }
-
-.hero h1 { font-size:3rem; margin-bottom:10px; font-weight:600; }
-.hero p { font-size:1.15rem; margin-bottom:8px; color: rgba(255,255,255,0.95); }
-
-nav {
-  margin-top:18px;
-  background: var(--blanco);
-  padding:12px;
-  border-radius: 50px;
-  box-shadow: 0 2px 8px var(--sombra);
-  max-width: 1000px;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-nav ul {
-  display:flex;
-  justify-content:center;
-  flex-wrap:wrap;
-  list-style:none;
-  gap:14px;
-}
-
-nav a {
-  display:inline-flex;
-  align-items:center;
-  gap:8px;
-  background: linear-gradient(90deg, var(--rojo), var(--rojo-oscuro));
-  color: var(--blanco);
-  text-decoration:none;
-  padding:10px 20px;
-  border-radius:25px;
-  font-weight:500;
-  transition: all 0.22s ease;
-}
-
-nav a:hover { transform: translateY(-2px); }
-
-main { flex:1; padding:36px 18px; max-width:1200px; margin:0 auto 40px; width:100%; }
-
-/* Secciones */
-.section {
-  background-color: var(--blanco);
-  padding: 36px;
-  border-radius:16px;
-  box-shadow:0 4px 12px var(--sombra);
-  text-align:left;
-  margin-bottom:36px;
-}
-
-.section h2 { color: var(--rojo); margin-bottom:16px; font-size:1.8rem; }
-.section p { color: var(--negro); margin-bottom:16px; line-height:1.7; }
-
-/* Estilo tipo "Nuestros logros" para tarjetas */
-.card-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 24px;
-  margin-top:24px;
-}
-
-.card {
-  background-color: var(--gris-claro);
-  border-left:6px solid var(--rojo);
-  padding:20px;
-  border-radius:12px;
-  box-shadow:0 3px 10px var(--sombra);
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-}
-
-.card h3, .card h4 { color: var(--rojo-oscuro); margin-bottom:10px; font-size:1.2rem; }
-.card p { font-size:0.95rem; color: var(--negro); line-height:1.5; }
-
-/* Botones al lado de los proyectos */
-.project-buttons {
-  display:flex;
-  gap:12px;
-  margin-top:12px;
-}
-
-.project-buttons a {
-  text-decoration:none;
-  font-weight:600;
-  background: linear-gradient(90deg, var(--rojo), var(--rojo-oscuro));
-  color: var(--blanco);
-  padding:10px 20px;
-  border-radius:50px;
-  transition: transform 0.2s ease;
-}
-
-.project-buttons a:hover { transform: translateY(-2px); }
-
-/* Listas */
-.list-left { text-align:left; margin:14px auto 0; max-width:820px; line-height:1.8; }
-.list-left li { margin:8px 0; }
-
-.cta-button {
-  display:inline-block;
-  background: linear-gradient(90deg, var(--rojo), var(--rojo-oscuro));
-  color: var(--blanco);
-  padding:12px 26px;
-  border-radius:50px;
-  text-decoration:none;
-  font-weight:600;
-  transition: transform 0.2s ease;
-}
-
-.cta-button:hover { transform: translateY(-3px); }
-
-footer {
-  background-color: var(--gris-medio);
-  color: var(--negro);
-  text-align:center;
-  padding:20px;
-  font-size:0.88rem;
-}
-
-.social-icons { margin-top:10px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
-.social-icons a { color: var(--rojo); text-decoration:none; display:inline-flex; gap:8px; align-items:center; padding:8px 10px; border-radius:10px; background:white; box-shadow:0 2px 8px rgba(0,0,0,.06); }
-
-@media (max-width:980px) {
-  .hero h1 { font-size:2rem; }
-  .card-grid { grid-template-columns: 1fr; gap:20px; }
-  .project-buttons { flex-direction:column; gap:10px; }
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sobre nosotros">
+    <meta name="author" content="Grupo Scout Vatnajökull">
+    <title>Sobre nosotros - Grupo Scout Vatnajökull</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
+    <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle.css">
+    <link rel="icon" title="Icono del Grupo Scout Vatnajökull" type="image/png" href="https://gsvatnajokull.github.io/img/logo.gif">
 </head>
+
 <body>
 
 <header>
