--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Grupo Scout Vatnajökull">
+    <meta name="description" content="Página principal">
     <meta name="author" content="Grupo Scout Vatnajökull">
-    <title>Grupo Scout Vatnajökull</title>
+    <title>Página principal - Grupo Scout Vatnajökull</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
     <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle.css">
