--- a/aboutus.html
+++ b/aboutus.html
@@ -35,31 +35,83 @@
 
 <main id="page-top">
   <section id="about" class="section">
-    <h2>Quiénes somos</h2>
-    <p>Somos un grupo scout ubicado en Bustarviejo.</p>
-  </section>
+    <h2>¿Quiénes somos?</h2>
+    <p>
+        Somos un nuevo Grupo Scout que está naciendo con mucha ilusión en Bustarviejo,
+        en plena Sierra de Madrid. Comenzaremos nuestro camino en la ronda scout 2026-2027,
+        a partir de octubre de 2026, con el objetivo de ofrecer a niños, niñas y jóvenes
+        una alternativa de ocio saludable, educativa y en contacto directo con la naturaleza.
+    </p>
+    <p>
+        Apostamos por una educación en el tiempo libre que forme personas libres y
+        responsables, abiertas y solidarias, críticas y comprometidas con su entorno,
+        consigo mismas y con los valores que construyen una sociedad mejor.
+    </p>
 
-  <section class="section">
-    <h2>Actividades</h2>
+    <h2>Nuestro estilo educativo</h2>
+    <p>
+        Nuestra propuesta educativa se basa en el Método Scout, un sistema pedagógico
+        reconocido a nivel mundial que educa a través de la experiencia. Aprendemos
+        haciendo, jugando y compartiendo, siempre en un ambiente de confianza y respeto.
+    </p>
+    <p>
+        Utilizamos herramientas como la vida en pequeños grupos, el contacto continuo
+        con la naturaleza, la educación en valores y el juego como motor de aprendizaje,
+        favoreciendo el crecimiento personal y el trabajo en equipo.
+    </p>
 
-    <div class="card-grid">
-      <div class="card">
-        <h4>Actividad 1</h4>
-        <p>Descripción de actividad 1.</p>
-      </div>
-      <div class="card">
-        <h4>Actividad 2</h4>
-        <p>Descripción de actividad 2.</p>
-      </div>
-      <div class="card">
-        <h4>Actividad 3</h4>
-        <p>Descripción de actividad 3.</p>
-      </div>
-    </div>
+    <h2>¿A quién va dirigido?</h2>
+    <p>
+        El grupo está abierto a niños, niñas y jóvenes a partir de los 6 años, organizados
+        en diferentes ramas según la edad, para adaptar las actividades a cada etapa de
+        desarrollo:
+    </p>
+    <ul>
+        <li><strong>Castores:</strong> de 6 a 8 años.</li>
+        <li><strong>Lobatos:</strong> de 9 a 11 años.</li>
+        <li><strong>Tropa:</strong> de 12 a 14 años.</li>
+        <li><strong>Escultas:</strong> de 15 a 17 años.</li>
+        <li><strong>Kraal:</strong> equipo de monitores y monitoras voluntarios.</li>
+    </ul>
 
-    <div class="project-buttons">
-      <a href="actividades.html">Actividades</a>
-    </div>
+    <h2>¿Qué hacemos en los scouts?</h2>
+    <p>
+        Nos reuniremos los sábados por la tarde para realizar actividades dinámicas y educativas
+        en las que los niños y jóvenes aprenden jugando, hacen nuevos amigos, cantan,
+        desarrollan proyectos y participan en acciones de servicio a la comunidad.
+    </p>
+    <p>
+        A lo largo del año organizaremos excursiones y acampadas en la naturaleza, donde
+        caminaremos por la montaña, exploraremos el entorno, conviviremos en grupo y
+        dormiremos bajo las estrellas. Serán experiencias únicas que fomentarán la
+        autonomía y el amor por el medio natural.
+    </p>
+
+    <h2>Campamentos: la gran aventura</h2>
+    <p>
+        Uno de los momentos más especiales del año scout son los campamentos. Durante
+        Navidad y Semana Santa realizaremos convivencias de varios días y, en verano,
+        culminaremos el curso con un gran campamento en el que se viven experiencias
+        inolvidables que dejan huella para toda la vida.
+    </p>
+
+    <h2>¿Cómo puedo apuntarme?</h2>
+    <p>
+        Si quieres formar parte de este nuevo proyecto scout desde sus inicios, o estás
+        interesado en recibir más información, no dudes en ponerte en contacto con
+        nosotros. Estaremos encantados de resolver tus dudas y acompañarte en este
+        comienzo.
+    </p>
+    <p><strong>¡Escríbenos!</strong></p>
+    <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:12px;">
+    <a class="cta-button" href="mailto:gsvatnajokull@gmail.com">gsvatnajokull@gmail.com</a>
+    
+    <p>
+        <strong>¡Te esperamos en Bustarviejo para empezar juntos esta nueva aventura scout!</strong>
+    </p>
+
+</section>
+
   </section>
 
   <section class="section" id="contact">
