--- a/index.html
+++ b/index.html
@@ -33,56 +33,79 @@
 
 <main>
   <section class="section">
-            <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
+    <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
+      <p>
+          ¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única?
+          ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
+          pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
+          muy enriquecedora de voluntariado que no solo transformará la vida de los niños y niñas
+          que acompañarás, sino también la tuya.
+      </p>
 
+    <h2>¿Por qué hacer voluntariado con nosotros?</h2>
+      <p>
+          Al ser parte de este grupo scout estarás inmerso en un entorno natural incomparable,
+          rodeado de montañas, bosques y una paz que solo la sierra puede ofrecer. Aquí no solo
+          serás un monitor, sino que formarás parte de una comunidad educativa que valora el
+          crecimiento personal, el aprendizaje y el trabajo en equipo.
+      </p>
 
-  <p>¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única? ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, ofrece una oportunidad muy enriquecedora de voluntariado que no solo transforma la vida de los niños y niñas a los que se acompaña, sino también la de quienes forman parte del proyecto.</p>
-<br>
-  <h3>¿Por qué hacer voluntariado con nosotros?</h3>
+    <h2>¿Qué ofrecemos?</h2>
+      <ul>
+          <li>
+              <strong>Crecimiento personal:</strong> Ser monitor en un grupo scout es mucho más
+              que enseñar, es una oportunidad para crecer, desarrollar nuevas habilidades de
+              liderazgo y adquirir experiencia en el trabajo con niños y jóvenes.
+          </li>
+          <li>
+              <strong>Formación continua:</strong> No necesitas experiencia previa. Valoramos
+              más tu entusiasmo, pasión por el trabajo en equipo y tu disposición a aprender.
+              Además, si todavía no tienes el título de monitor de ocio y tiempo libre, tendrás
+              la posibilidad de realizar las prácticas y/o el curso de coordinador.
+          </li>
+          <li>
+              <strong>Impacto real:</strong> Trabajarás de cerca con niños y jóvenes, ayudándoles
+              a desarrollar valores como la solidaridad, el respeto, el esfuerzo y el trabajo
+              en equipo.
+          </li>
+          <li>
+              <strong>Conexión con la naturaleza:</strong> El entorno de Bustarviejo te permitirá
+              desconectar del estrés diario y estar en contacto directo con la naturaleza.
+          </li>
+      </ul>
 
-  <p>Formar parte de este grupo scout supone estar inmerso en un entorno natural incomparable, rodeado de montañas, bosques y una paz que solo la sierra puede ofrecer. No se trata únicamente de desempeñar el papel de monitor, sino de integrarse en una comunidad educativa que valora el crecimiento personal, el aprendizaje y el trabajo en equipo.</p>
-<br>
-  <h3>¿Qué ofrecemos?</h3>
+    <h2>¿Qué buscamos en ti?</h2>
+      <p>
+          Buscamos personas comprometidas, responsables y con muchas ganas de aportar. Si te
+          entusiasma la idea de ser una figura educativa clave en la vida de los más jóvenes,
+          sin importar tu nivel de experiencia, ¡te estamos esperando!
+      </p>
 
-  <ul>
-    <li>
-      <p><strong>Crecimiento personal:</strong> Ser monitor en un grupo scout es mucho más que enseñar; es una oportunidad para crecer, desarrollar habilidades de liderazgo y adquirir experiencia en el trabajo con niños, niñas y jóvenes.</p>
-    </li>
-    <li>
-      <p><strong>Formación continua:</strong> No se requiere experiencia previa. Se valoran especialmente el entusiasmo, la pasión por el trabajo en equipo y la disposición para aprender. Además, en caso de no contar todavía con el título de monitor de ocio y tiempo libre, se ofrece la posibilidad de realizar las prácticas correspondientes y/o el curso de coordinador, en un entorno que favorece el aprendizaje práctico.</p>
-    </li>
-    <li>
-      <p><strong>Impacto real:</strong> Se trabaja de forma cercana con niños y jóvenes, ayudándoles a desarrollar valores como la solidaridad, el respeto, el esfuerzo y el trabajo en equipo, compartiendo risas, aventuras y momentos inolvidables.</p>
-    </li>
-    <li>
-      <p><strong>Conexión con la naturaleza:</strong> El entorno de Bustarviejo permite desconectar del estrés diario, respirar aire puro y mantener un contacto directo con la naturaleza, enriqueciendo la experiencia personal y el bienestar.</p>
-    </li>
-  </ul>
-<br>
-  <h3>¿Qué buscamos?</h3>
+    <h2>¿Qué ganarás como voluntario?</h2>
+      <ul>
+          <li>Desarrollo de habilidades de liderazgo y trabajo en equipo.</li>
+          <li>Experiencia valiosa en el ámbito educativo y social.</li>
+          <li>Oportunidad de disfrutar aprendiendo en un entorno natural.</li>
+          <li>Formación práctica en actividades de ocio y tiempo libre.</li>
+          <li>Satisfacción personal al impactar positivamente en la vida de los más jóvenes.</li>
+      </ul>
 
-  <p>Se buscan personas comprometidas, responsables y con ganas de aportar. Si motiva la idea de ser una figura educativa clave en la vida de los más jóvenes, independientemente del nivel de experiencia, este es el lugar adecuado.</p>
-<br>
-  <h3>¿Qué ganarás como voluntario?</h3>
+    <h2>¿Estás listo para ser parte de una aventura educativa única?</h2>
+      <p>
+          Si estás buscando una experiencia transformadora que combine la naturaleza, la
+          educación y el trabajo en equipo, el Grupo Scout Vatnajökull es tu oportunidad.
+          ¡No dudes en ponerte en contacto con nosotros y dar el primer paso!
+      </p>
 
-  <ul>
-    <li><p>Desarrollo de habilidades de liderazgo y trabajo en equipo.</p></li>
-    <li><p>Experiencia valiosa en el ámbito educativo y social.</p></li>
-    <li><p>Oportunidad de aprender y disfrutar en un entorno natural, tranquilo y enriquecedor.</p></li>
-    <li><p>Formación práctica en actividades de ocio y tiempo libre.</p></li>
-    <li><p>Satisfacción personal al generar un impacto positivo en la vida de niños y niñas.</p></li>
-  </ul>
-<br>
-  <h3>¿Estás listo para ser parte de una aventura educativa única?</h3>
-
-  <p>Si se busca una experiencia transformadora que combine naturaleza, educación y trabajo en equipo, el Grupo Scout Vatnajökull es una excelente oportunidad. No dudes en ponerte en contacto y dar el primer paso para formar parte de este proyecto.</p>
-
-  <p>¡Te esperamos en Bustarviejo con muchas ganas de crecer juntos!</p>
-
-
-
-        </section>
-    </main>
+      <p><strong>¡Escríbenos!</strong></p>
+      <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:12px;">
+      <a class="cta-button" href="mailto:gsvatnajokull@gmail.com">gsvatnajokull@gmail.com</a>
+      
+      <p>
+          <strong>¡Te esperamos en Bustarviejo con muchas ganas de crecer juntos!</strong>
+      </p>
+  </section>
+</main>
 
     <footer id="contact">
         <h2>Ponte en contacto con nosotros</h2>
