--- a/aboutus.html
+++ b/aboutus.html
@@ -18,8 +18,7 @@
   <div class="hero">
     <div class="hero-content">
       <h1>Grupo Scout Vatnajökull</h1>
-      <p>Grupo Scout Vatnajökull.</p>
-      <p>Encuéntranos en Bustarviejo.</p>
+      <h2>Estamos en Bustarviejo.</h2>
     </div>
   </div>
 
