--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
       <p><strong>¡Escríbenos!</strong></p>
       <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:12px;">
       <a class="cta-button" href="mailto:gsvatnajokull@gmail.com">gsvatnajokull@gmail.com</a>
-      
+      </div>
+      <br>
       <p>
           <strong>¡Te esperamos en Bustarviejo con muchas ganas de crecer juntos!</strong>
       </p>
