--- a/index.html
+++ b/index.html
@@ -13,114 +13,112 @@
 </head>
 
 <body>
-    <header>
-        <div class="hero">
-            <div class="hero-content">
-                <h1>Grupo Scout Vatnajökull</h1>
-                <p>Grupo Scout Vatnajökull.</p>
-                <p>Encuéntranos en Bustarviejo.</p>
-            </div>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#page-top"><i class="fas fa-home"></i> Inicio</a></li>
-                <li><a href="aboutus.html"><i class="fas fa-users"></i> Quienes somos</a></li>
-                <li><a href="actividades.html"><i class="fas fa-project-diagram"></i> Actividades</a></li>
-                <li><a href="#contact"><i class="fas fa-envelope"></i> Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-
-<main>
-  <section class="section">
-    <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
-      <p>
-          ¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única?
-          ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
-          pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
-          muy enriquecedora de voluntariado que no solo transformará la vida de los niños y niñas
-          que acompañarás, sino también la tuya.
-      </p>
-
-    <h2>¿Por qué hacer voluntariado con nosotros?</h2>
-      <p>
-          Al ser parte de este grupo scout estarás inmerso en un entorno natural incomparable,
-          rodeado de montañas, bosques y una paz que solo la sierra puede ofrecer. Aquí no solo
-          serás un monitor, sino que formarás parte de una comunidad educativa que valora el
-          crecimiento personal, el aprendizaje y el trabajo en equipo.
-      </p>
-
-    <h2>¿Qué ofrecemos?</h2>
-      <p>
-      <ul>
-          <li>
-              <strong>Crecimiento personal:</strong> Ser monitor en un grupo scout es mucho más
-              que enseñar, es una oportunidad para crecer, desarrollar nuevas habilidades de
-              liderazgo y adquirir experiencia en el trabajo con niños y jóvenes.
-          </li>
-          <li>
-              <strong>Formación continua:</strong> No necesitas experiencia previa. Valoramos
-              más tu entusiasmo, pasión por el trabajo en equipo y tu disposición a aprender.
-              Además, si todavía no tienes el título de monitor de ocio y tiempo libre, tendrás
-              la posibilidad de realizar las prácticas y/o el curso de coordinador.
-          </li>
-          <li>
-              <strong>Impacto real:</strong> Trabajarás de cerca con niños y jóvenes, ayudándoles
-              a desarrollar valores como la solidaridad, el respeto, el esfuerzo y el trabajo
-              en equipo.
-          </li>
-          <li>
-              <strong>Conexión con la naturaleza:</strong> El entorno de Bustarviejo te permitirá
-              desconectar del estrés diario y estar en contacto directo con la naturaleza.
-          </li>
-      </ul>
-      </p>
-
-    <h2>¿Qué buscamos en ti?</h2>
-      <p>
-          Buscamos personas comprometidas, responsables y con muchas ganas de aportar. Si te
-          entusiasma la idea de ser una figura educativa clave en la vida de los más jóvenes,
-          sin importar tu nivel de experiencia, ¡te estamos esperando!
-      </p>
-
-    <h2>¿Qué ganarás como voluntario?</h2>
-      <p>
-      <ul>
-          <li>Desarrollo de habilidades de liderazgo y trabajo en equipo.</li>
-          <li>Experiencia valiosa en el ámbito educativo y social.</li>
-          <li>Oportunidad de disfrutar aprendiendo en un entorno natural.</li>
-          <li>Formación práctica en actividades de ocio y tiempo libre.</li>
-          <li>Satisfacción personal al impactar positivamente en la vida de los más jóvenes.</li>
-      </ul>
-      </p>
-
-    <h2>¿Estás listo para ser parte de una aventura educativa única?</h2>
-      <p>
-          Si estás buscando una experiencia transformadora que combine la naturaleza, la
-          educación y el trabajo en equipo, el Grupo Scout Vatnajökull es tu oportunidad.
-          ¡No dudes en ponerte en contacto con nosotros y dar el primer paso!
-      </p>
-
-      <p><strong>¡Escríbenos!</strong></p>
-      <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:12px;">
-      <a class="cta-button" href="mailto:gsvatnajokull@gmail.com">gsvatnajokull@gmail.com</a>
+  <header>
+    <div class="hero">
+      <div class="hero-content">
+        <h1>Grupo Scout Vatnajökull</h1>
+        <h2>Estamos en Bustarviejo</h2>
       </div>
-      <br>
-      <p>
-          <strong>¡Te esperamos en Bustarviejo con muchas ganas de crecer juntos!</strong>
-      </p>
-  </section>
-</main>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#page-top"><i class="fas fa-home"></i> Inicio</a></li>
+        <li><a href="aboutus.html"><i class="fas fa-users"></i> Quienes somos</a></li>
+        <li><a href="actividades.html"><i class="fas fa-project-diagram"></i> Actividades</a></li>
+        <li><a href="#contact"><i class="fas fa-envelope"></i> Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <footer id="contact">
-        <h2>Ponte en contacto con nosotros</h2>
-        <div class="social-icons">
-            <a href="https://twitter.com/gsvatnajokull"><i class="fab fa-twitter"></i> gsvatnajokull</a>
-            <a href="mailto:gsvatnajokull@gmail.com"><i class="fas fa-envelope"></i> gsvatnajokull@gmail.com</a>
-            <a href="https://www.instagram.com/gsvatnajokull"><i class="fab fa-instagram"></i> gsvatnajokull</a>
+  <main>
+    <section class="section">
+      <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
+        <p>
+            ¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única?
+            ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
+            pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
+            muy enriquecedora de voluntariado que no solo transformará la vida de los niños y niñas
+            que acompañarás, sino también la tuya.
+        </p>
+
+      <h2>¿Por qué hacer voluntariado con nosotros?</h2>
+        <p>
+            Al ser parte de este grupo scout estarás inmerso en un entorno natural incomparable,
+            rodeado de montañas, bosques y una paz que solo la sierra puede ofrecer. Aquí no solo
+            serás un monitor, sino que formarás parte de una comunidad educativa que valora el
+            crecimiento personal, el aprendizaje y el trabajo en equipo.
+        </p>
+
+      <h2>¿Qué ofrecemos?</h2>
+        <p>
+        <ul>
+            <li>
+                <strong>Crecimiento personal:</strong> Ser monitor en un grupo scout es mucho más
+                que enseñar, es una oportunidad para crecer, desarrollar nuevas habilidades de
+                liderazgo y adquirir experiencia en el trabajo con niños y jóvenes.
+            </li>
+            <li>
+                <strong>Formación continua:</strong> No necesitas experiencia previa. Valoramos
+                más tu entusiasmo, pasión por el trabajo en equipo y tu disposición a aprender.
+                Además, si todavía no tienes el título de monitor de ocio y tiempo libre, tendrás
+                la posibilidad de realizar las prácticas y/o el curso de coordinador.
+            </li>
+            <li>
+                <strong>Impacto real:</strong> Trabajarás de cerca con niños y jóvenes, ayudándoles
+                a desarrollar valores como la solidaridad, el respeto, el esfuerzo y el trabajo
+                en equipo.
+            </li>
+            <li>
+                <strong>Conexión con la naturaleza:</strong> El entorno de Bustarviejo te permitirá
+                desconectar del estrés diario y estar en contacto directo con la naturaleza.
+            </li>
+        </ul>
+        </p>
+
+      <h2>¿Qué buscamos en ti?</h2>
+        <p>
+            Buscamos personas comprometidas, responsables y con muchas ganas de aportar. Si te
+            entusiasma la idea de ser una figura educativa clave en la vida de los más jóvenes,
+            sin importar tu nivel de experiencia, ¡te estamos esperando!
+        </p>
+
+      <h2>¿Qué ganarás como voluntario?</h2>
+        <p>
+        <ul>
+            <li>Desarrollo de habilidades de liderazgo y trabajo en equipo.</li>
+            <li>Experiencia valiosa en el ámbito educativo y social.</li>
+            <li>Oportunidad de disfrutar aprendiendo en un entorno natural.</li>
+            <li>Formación práctica en actividades de ocio y tiempo libre.</li>
+            <li>Satisfacción personal al impactar positivamente en la vida de los más jóvenes.</li>
+        </ul>
+        </p>
+
+      <h2>¿Estás listo para ser parte de una aventura educativa única?</h2>
+        <p>
+            Si estás buscando una experiencia transformadora que combine la naturaleza, la
+            educación y el trabajo en equipo, el Grupo Scout Vatnajökull es tu oportunidad.
+            ¡No dudes en ponerte en contacto con nosotros y dar el primer paso!
+        </p>
+
+        <p><strong>¡Escríbenos!</strong></p>
+        <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:12px;">
+        <a class="cta-button" href="mailto:gsvatnajokull@gmail.com">gsvatnajokull@gmail.com</a>
         </div>
-        <p>&copy; 2025 Grupo Scout Vatnajökull.</p>
-    </footer>
+        <br>
+        <p>
+            <strong>¡Te esperamos en Bustarviejo con muchas ganas de crecer juntos!</strong>
+        </p>
+    </section>
+  </main>
 
+  <footer id="contact">
+    <h2>Ponte en contacto con nosotros</h2>
+    <div class="social-icons">
+      <a href="https://twitter.com/gsvatnajokull"><i class="fab fa-twitter"></i> gsvatnajokull</a>
+      <a href="mailto:gsvatnajokull@gmail.com"><i class="fas fa-envelope"></i> gsvatnajokull@gmail.com</a>
+      <a href="https://www.instagram.com/gsvatnajokull"><i class="fab fa-instagram"></i> gsvatnajokull</a>
+    </div>
+    <p>&copy; 2025 Grupo Scout Vatnajökull.</p>
+  </footer>
 </body>
 </html>
